<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/shoeListFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_newLoginFragment"
            app:destination="@id/newLoginFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_right"
            app:popExitAnim="@anim/slide_to_left"
            app:popUpTo="@id/newLoginFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_loginFragment_to_welcomeScreen"
            app:destination="@id/welcomeScreenFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_right"
            app:popExitAnim="@anim/slide_to_left"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/newLoginFragment"
        android:name="com.udacity.shoestore.login.NewLoginFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_new_login">
        <action
            android:id="@+id/action_newLoginFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:enterAnim="@anim/slide_from_left"
            app:exitAnim="@anim/slide_to_right"
            app:popEnterAnim="@anim/slide_from_left"
            app:popExitAnim="@anim/slide_to_right"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/welcomeScreenFragment"
        android:name="com.udacity.shoestore.login.WelcomeScreenFragment"
        android:label="@string/welcome"
        tools:layout="@layout/fragment_welcome_screen">
        <action
            android:id="@+id/action_welcomeScreen_to_instructionsScreen"
            app:destination="@id/instructionsScreenFragment"
            app:enterAnim="@anim/slide_from_right"
            app:exitAnim="@anim/slide_to_left"
            app:popEnterAnim="@anim/slide_from_right"
            app:popExitAnim="@anim/slide_to_left" />
    </fragment>
    <fragment
        android:id="@+id/instructionsScreenFragment"
        android:name="com.udacity.shoestore.login.InstructionsScreenFragment"
        android:label="@string/instructions"
        tools:layout="@layout/fragment_instructions_screen">
        <action
            android:id="@+id/action_instructionsScreen_to_shoeListFragment"
            app:destination="@id/shoeListFragment"
            app:popUpTo="@id/shoeListFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.shoelisting.ShoeListFragment"
        android:label="@string/shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.udacity.shoestore.shoelisting.ShoeDetailsFragment"
        tools:layout="@layout/fragment_shoe_details">
        <argument
            android:name="shoe"
            app:argType="com.udacity.shoestore.models.Shoe" />
    </fragment>
</navigation>