<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.WelcomeScreenFragment">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.login.LoginRegisterViewModel" />
    </data>

    <!-- The use of ConstraintLayout is to help constrain my views exactly where i need them-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/welcome_text_one"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/welcome_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/to_the_shoe_store"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text_one"
            app:layout_constraintStart_toStartOf="@+id/welcome_text_one"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_one" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/Welcome_Phrase"
            android:textAlignment="center"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/welcome_text_two"
            app:layout_constraintStart_toStartOf="@+id/welcome_text_two"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_two"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text_one"
            app:layout_constraintVertical_bias="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>