<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.InstructionsScreenFragment">

    <!-- The use of ConstraintLayout is to help constrain my views exactly where i need them-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Instructions_text_one"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/instructions"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <TextView
            android:id="@+id/info_text"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:text="@string/Instructions_Text"
            android:textAlignment="textStart"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/Instructions_text_one"
            app:layout_constraintStart_toStartOf="@+id/Instructions_text_one"
            app:layout_constraintTop_toBottomOf="@+id/Instructions_text_one"
            app:layout_constraintVertical_bias="0.3" />

        <Button
            android:id="@+id/shoe_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Instructions_text_one"
            app:layout_constraintVertical_bias="0.9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
