<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".shoelisting.ShoeDetailsFragment">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.shoestore.shoelisting.ShoeListViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/add_new_shoe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_shoe"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.050000012" />

            <ImageView
                android:id="@+id/shoes_image1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_new_shoe" />

            <ImageView
                android:id="@+id/shoes_image2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toStartOf="@+id/shoes_image1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_new_shoe" />

            <ImageView
                android:id="@+id/shoes_image3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintDimensionRatio="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/shoes_image1"
                app:layout_constraintTop_toBottomOf="@+id/add_new_shoe" />

            <TextView
                android:id="@+id/shoe_name_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoes_image1" />

            <EditText
                android:id="@+id/shoe_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/shoe_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{viewModel.shoe_name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name_label"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/shoe_size_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_name" />

            <EditText
                android:id="@+id/shoe_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/size"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:minHeight="48dp"
                android:text="@{viewModel.shoe_size.toString()}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/shoe_size_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size_label"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/shoe_company_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/company_brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_size" />

            <EditText
                android:id="@+id/shoe_company"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/company"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{viewModel.shoe_company}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/shoe_company_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_company_label" />

            <TextView
                android:id="@+id/shoe_description_label"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_company" />

            <EditText
                android:id="@+id/shoe_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/description"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@{viewModel.shoe_description}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/shoe_description_label"
                app:layout_constraintTop_toBottomOf="@+id/shoe_description_label"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <Button
                android:id="@+id/add_shoe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_description" />

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@android:string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shoe_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
